--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -70,6 +70,16 @@
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
+.navgrid {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+}
+.navgrid li{
+  list-style: none;
+  padding-left: 2rem;
+}
 
 .grid {
   display: flex;
