--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,18 +1,22 @@
 .container {
+  width: 90%;
+  margin: 0px auto;
   min-height: 100vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
 .main {
-  padding: 5rem 0;
+  width: 90%;
+  margin: 0px auto;
+  padding: 1rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -35,33 +39,6 @@
   align-items: center;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
 .code {
   background: #fafafa;
   border-radius: 5px;
@@ -70,16 +47,7 @@
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
-.navgrid {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100%;
-}
-.navgrid li{
-  list-style: none;
-  padding-left: 2rem;
-}
+
 
 .grid {
   display: flex;
@@ -90,6 +58,10 @@
   margin-top: 3rem;
 }
 
+.grid > *{
+  flex: 1 1 33%;
+}
+
 .card {
   margin: 1rem;
   flex-basis: 45%;
@@ -98,7 +70,11 @@
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
-  border-radius: 10px;
+ 
+  border-radius: 55px 25px 50px 5px;
+background: #ffffff;
+box-shadow:  8px 8px 17px #8f8f8f,
+             -8px -8px 17px #ffffff;
   transition: color 0.15s ease, border-color 0.15s ease;
 }
 
@@ -120,13 +96,44 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-}
+.title a ,
+.title span{
+    color: #0070f3;
+    text-decoration: none;
+  }
+  
+  .title a:hover,
+  .title a:focus,
+  .title a:active {
+    text-decoration: underline;
+  }
+  
+  .title {
+    margin: 0;
+    line-height: 1.15;
+    font-size: 4rem;
+  }
+  
+  .title,
+  .description {
+    text-align: center;
+  }
+  
+  .description {
+    line-height: 1.5;
+    font-size: 1.5rem;
+  }
+
+  
 
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .container,
+  .main{
+    width: 100%;
+    margin: 0px auto;
   }
 }
